Fix clipping issue

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ Version: 1.0.0
 
 html,
 body {
-  overflow-x: hidden;
+  overflow-x: clip;
   margin: 0;
   padding: 0;
   height: auto !important;
